Added the mobile layout of the website

--- a/index.html
+++ b/index.html
@@ -71,13 +71,21 @@
   </section>
 
   <section id="page-main-youtube-section">
-    <h1>Listen My Music</h1>
+    <h1>Listen To My Music</h1>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/Lli99OmkPwM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </section>
+
+  <section id="page-main-social-media">
+    <h1>Follow me on my Social Medias</h1>
+    <div id="page-main-social-media-logos">
+      <img src="/img/Youtube-icon.svg" alt="YouTube Icon">
+      <img src="/img/spotify-icon.svg" alt="Spotify Icon">
+      <img src="/img/instagram-icon.svg" alt="Instagram Icon">
+    </div>
   </section>
 </main>
 
 <footer id="page-footer">
-  <h2>Contact Us</h2>
   <h4>All rights deserved by The Red Luminers</h4>
 </footer>
   
